test/sema/struct_invalid_member_type.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  nested: INVALID,
  // CHECK: [[# @LINE - 1 ]]:11: error: cannot resolve type 'INVALID'
}

fn main() -> void {}
